# mcp-dsp-game

./: .coveragerc  BLUEPRINT.md  README.md  pyproject.toml  server.json
.github/workflows/: build-plugin.yml  python-tests.yml  release.yml
docs/: INSTALLATION.md  dev_environment_setup.md  product_requirements.md  technical_blueprint.md
src/bepinex_plugin/: DysonMCP.csproj  Plugin.cs
src/bepinex_plugin/Network/: WebSocketServer.cs
src/bepinex_plugin/Patches/: LogisticsPatch.cs  PowerPatch.cs  ProductionPatch.cs
src/mcp_server/: server.py
src/mcp_server/data_sources/: __init__.py  realtime_stream.py  router.py  save_parser.py
src/mcp_server/models/: factory_state.py
src/mcp_server/utils/: recipe_database.py
tests/: __init__.py  test_analyzers.py  test_factory_state.py  test_recipe_database.py  test_save_parser.py
